--- a/WebContent/FichaPelicula.html
+++ b/WebContent/FichaPelicula.html
@@ -83,11 +83,23 @@
       <p><a href="#">Registrarse</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-    <form action="FichaPelicula.jsp" method="get"> 
-      <h2>Películas más visitadas</h2>
-      <img src= "C:\Users\ikaslea\Desktop\fotos fichas\AlienCovenant.jpg"  alt="Alien Covenant"/>
-      <hr>
-      </form>
+    <form action="FichaPelicula.jsp" method="post">
+		<input type="text" name="nombre" id="nombre" /> <br>
+		Título Original: <input type="text" name="Título Original" id="Título Original" /> <br>
+		Año: <input type="text" name="Año" id="Año" /> <br>
+		Duración: <input type="text" name="Duración" id="Duración" /> <br>
+		País: <input type="text" name="País" id="País" /> <br>
+		Director: <input type="text" name="Director" id="Director" /> <br>
+		Guión: <input type="text" name="Guión" id="Guión" /> <br>
+		Fotografía: <input type="text" name="Fotografía" id="Fotografía" /> <br> 
+		Reparto: <input type="text" name="Reparto" id="Reparto" /> <br>
+		Productora: <input type="text" name="Productora" id="Productora" /> <br>
+		Genero: <input type="text" name="Genero" id="Genero" /> <br>
+		Sinopsis: <input type="text" name="Sinopsis" id="Sinopsis" /> <br>
+		Premios: <input type="text" name="Premios" id="Premios" /> <br>
+		Críticas: <input type="text" name="Críticas" id="Críticas" /> <br>
+		
+	</form>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
