--- a/WebContent/Principal.html
+++ b/WebContent/Principal.html
@@ -86,8 +86,13 @@
       <h2>Películas más visitadas</h2>
       <hr>
     <form action="FichaPelicula.jsp" method="get"> 
-      <a title="alien" href="FichaPelicula.html"> <img src="C:\Users\ikaslea\Desktop\fotos fichas\AlienCovenant.jpg"  alt="Alien Covenant"/></a>
+      <a title="Alien:Covenant" href="FichaPelicula.html"> <img src="C:\Users\ikaslea\Desktop\fotos fichas\AlienCovenant.jpg"  alt="Alien Covenant"/></a>
        </form>
+       </br>
+     <form action="FichaPelicula.jsp" method="get"> 
+      <a title="Prometheus" href="FichaPelicula.html"> <img src="C:\Users\ikaslea\Desktop\fotos fichas\Prometheus.jpg"  alt="Prometheus"/></a>
+       </form>
+       </br>
        </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
